--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geriar</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@100;400;700&family=Kanit&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -20,8 +23,9 @@
           <div class="barra-nav">
             <a class="nav-link" href="./index.html">HOME</a>
             
-            <a class="nav-link" href="./pages/sobre.html">Sobre nós</a>
+            <a class="nav-link" href="./pages/sobre.html">Sobre.nós</a>
             <a class="nav-link" href="./pages/perfil.html">PERFIL</a>
+            <a class="nav-link" href="./pages/login.html">Login</a>
             <a class="nav-link2" href="./pages/cadastro.html">CADASTRAR</a>
           </div>
         </nav>
