--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -22,7 +22,6 @@
 
           <div class="barra-nav">
             <a class="nav-link" href="../index.html">Home</a>
-            <a class="nav-link" href="./sobre.html">Sobre.nós</a>
             <a class="nav-link" href="../pages/login.html">Login</a>
             <a class="nav-link" href="./pages/perfil.html">Perfil</a>
 
@@ -34,7 +33,7 @@
   </div>
   <h1 class="pergunta">O que gostaria?</h1>
   
-  <main>
+  <main class="main">
 
    
     <div class="corpo-principal2">
